--- a/cmd/example-hook-sidecar/Dockerfile
+++ b/cmd/example-hook-sidecar/Dockerfile
@@ -16,7 +16,7 @@
 # Copyright 2018 Red Hat, Inc.
 #
 
-FROM fedora:28
+FROM kubevirt/libvirt:5.0.0
 
 LABEL maintainer="The KubeVirt Project <kubevirt-dev@googlegroups.com>"
 
